<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>low_pass_force_torque_sensor_controller</name>
  <version>0.21.1</version>
  <description>Controller to publish state of force-torque sensors</description>

  <maintainer email="dummy@test.com">Dummy Name</maintainer>

  <license>BSD</license>

  <author>Dummy Name</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>controller_interface</depend> 
  <depend>realtime_tools</depend> 
  <depend>roscpp</depend> 

  <build_depend>geometry_msgs</build_depend> 
  <build_depend>hardware_interface</build_depend> 
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>pluginlib</build_depend> 

  <build_export_depend>geometry_msgs</build_export_depend> 
  <build_export_depend>hardware_interface</build_export_depend> 
  <build_export_depend>dynamic_reconfigure</build_export_depend>

  <exec_depend>controller_manager</exec_depend> 

  

  <export>
    <controller_interface plugin="${prefix}/low_pass_force_torque_sensor_plugin.xml"/>
  </export>
</package>
